# biscuit

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Mayhem.yml  Mayhemfile  README.md  asn1.conf  dockerfile  index.html  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: jwt.rs
biscuit/: all.html  enum.Presence.html  enum.SingleOrMultiple.html  enum.Validation.html  index.html  sidebar-items.js  struct.Base64Url.html  struct.ClaimPresenceOptions.html  struct.ClaimsSet.html  struct.Compact.html  struct.Empty.html  struct.RegisteredClaims.html  struct.TemporalOptions.html  struct.Timestamp.html  struct.ValidationOptions.html  trait.CompactJson.html  trait.CompactPart.html  type.JWE.html  type.JWT.html
biscuit/digest/: index.html  sidebar-items.js  static.SHA256.html  static.SHA384.html  static.SHA512.html  static.SHA512_256.html  struct.Algorithm.html
biscuit/errors/: enum.DecodeError.html  enum.Error.html  enum.ValidationError.html  index.html  sidebar-items.js
biscuit/helpers/presence/: enum.Presence.html
biscuit/helpers/temporal_options/: struct.TemporalOptions.html
biscuit/jwa/: enum.Algorithm.html  enum.ContentEncryptionAlgorithm.html  enum.EncryptionOptions.html  enum.KeyManagementAlgorithm.html  enum.KeyManagementAlgorithmType.html  enum.SignatureAlgorithm.html  index.html  sidebar-items.js  struct.EncryptionResult.html  trait.SecureRandom.html
biscuit/jwe/: enum.Compact.html  enum.CompressionAlgorithm.html  index.html  sidebar-items.js  struct.CekAlgorithmHeader.html  struct.Header.html  struct.RegisteredHeader.html
biscuit/jwk/: enum.AlgorithmParameters.html  enum.EllipticCurve.html  enum.EllipticCurveKeyType.html  enum.KeyOperations.html  enum.KeyType.html  enum.OctetKeyPairType.html  enum.OctetKeyType.html  enum.PublicKeyUse.html  enum.RSAKeyType.html  index.html  sidebar-items.js  struct.CommonParameters.html  struct.EllipticCurveKeyParameters.html  struct.JWK.html  struct.JWKSet.html  struct.OctetKeyPairParameters.html  struct.OctetKeyParameters.html  struct.OtherPrimesInfo.html  struct.RSAKeyParameters.html
biscuit/jws/: enum.Compact.html  enum.Secret.html  index.html  sidebar-items.js  struct.Header.html  struct.RegisteredHeader.html
doc/: README.md  supported.md
examples/: claims.rs  custom_header.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decryption.rs  fuzz_signature_validation.rs
src/: digest.rs  errors.rs  jwa.rs  jwe.rs  jwk.rs  jws.rs  lib.rs  macros.rs  test.rs
src/biscuit/: digest.rs.html  errors.rs.html  jwa.rs.html  jwe.rs.html  jwk.rs.html  jws.rs.html  lib.rs.html  macros.rs.html
src/helpers/: mod.rs  presence.rs  temporal_options.rs  validation.rs
src/jws/: compact.rs  flattened.rs
src/serde_custom/: base64_url_uint.rs  byte_sequence.rs  flatten.rs  mod.rs  option_base64_url_uint.rs  option_byte_sequence.rs
test/fixtures/: ecdsa_private_key.der  ecdsa_private_key.p8  ecdsa_private_key.pem  ecdsa_public_key.der  ecdsa_public_key.pem  jwk_private_key.json  jwk_public_key.json  private_key.pem  public_key.der  public_key.pem  rsa_private_key.der  rsa_public_key.der  rsa_public_key.pem
(+36 files in other folders)
