[package]
name = "biscuit"
version = "0.4.1"
edition = "2018"
authors = ["Yong Wen Chua <me@yongwen.xyz>", "Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT"
readme = "README.md"
description = """A library to work with Javascript Object Signing and Encryption(JOSE),
including JSON Web Tokens (JWT), JSON Web Signature (JWS) and JSON Web Encryption (JWE)."""
homepage = "https://github.com/lawliet89/biscuit"
repository = "https://github.com/lawliet89/biscuit"
documentation = "https://docs.rs/biscuit/"
keywords = ["jwt", "json", "jose", "jwe", "jws"]
categories = ["authentication", "web-programming"]

[badges]
travis-ci = { repository = "lawliet89/biscuit" }

[lib]
name = "biscuit"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
chrono = "0.4.2"
data-encoding = "2.1.1"
once_cell = "1.2.0"
num = "0.2"
ring = "0.16.5"
serde = "1.0.92"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
url = "^2.0"

[dev-dependencies]
serde_test = "1.0"
